vitis/.metadata/.plugins/org.eclipse.cdt.ui/NFC_4CH_TEST.build.log
18:01:59 **** Incremental Build of configuration Debug for project NFC_4CH_TEST ****
make all 
'Building file: ../src/helloworld.c'
'Invoking: ARM v8 gcc compiler'
aarch64-none-elf-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -ID:/Xilinx_2019_2/RTL_prj/OCOWFC_Z19/OCOWFC_Z19/Z19_NFC_4Chanel/Z19_NFC_4Channel/vitis/z19_nfc_4ch_platform/export/z19_nfc_4ch_platform/sw/z19_nfc_4ch_platform/standalone_domain/bspinclude/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:353:54: error: 'XAxiDma' {aka 'struct XAxiDma'} has no member named 'IsReady'
                    ch, g_dmas[ch].RegBase, g_dmas[ch].IsReady);
                                                      ^
../src/helloworld.c:434:88: error: 'XAxiDma' {aka 'struct XAxiDma'} has no member named 'IsReady'
                 xil_printf("DBG: DMA RegBase=0x%08X, IsReady=%d\r\n", dma->RegBase, dma->IsReady);
                                                                                        ^~
At top level:
../src/helloworld.c:234:12: warning: 'dma_recv' defined but not used [-Wunused-function]
 static int dma_recv(u32 ch, u32 byte_len)
            ^~~~~~~~
../src/helloworld.c:64:11: warning: 'g_rd_buf' defined but not used [-Wunused-variable]
 static u8 g_rd_buf[NFC_CH_NUM][LOCAL_BUF_SIZE] __attribute__((aligned(64)));
           ^~~~~~~~
../src/helloworld.c:63:11: warning: 'g_wr_buf' defined but not used [-Wunused-variable]
 static u8 g_wr_buf[NFC_CH_NUM][LOCAL_BUF_SIZE] __attribute__((aligned(64)));
           ^~~~~~~~
make: *** [src/subdir.mk:23: src/helloworld.o] Error 1

18:02:00 Build Finished (took 344ms)

